--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>microservices.book</groupId>
     <artifactId>social-multiplecation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>social-multiplecation</name>
+    <name>social-multiplication</name>
     <description>Social App</description>
 
     <properties>
@@ -46,10 +46,17 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
