feat 주울,유레카 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org.hibernate.SQL=debug
 multiplication.exchange=multiplication_exchange
 multiplication.solved.key=multiplication.solved
 
+# 서비스 디스커버리 설정
+eureka.client.service-url.default=http://localhost:8761
