--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-
+server.port=8080
 spring.datasource.url= jdbc:h2:tcp://localhost/~/social
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 
@@ -14,4 +14,4 @@ multiplication.exchange=multiplication_exchange
 multiplication.solved.key=multiplication.solved
 
 # 서비스 디스커버리 설정
-eureka.client.service-url.default=http://localhost:8761
+eureka.client.service-url.default=http://localhost:8761/eureka/
